fixed input refreshing, more info button on movie details page, put data into server so it doesn't request too much

--- a/client/src/components/MovieCard/MovieCard.scss
+++ b/client/src/components/MovieCard/MovieCard.scss
@@ -121,6 +121,14 @@
       width: 55%;
       padding: 20px;
       border-radius: 10px;
+
+      &--2 {
+        background-image: linear-gradient(
+          to bottom,
+          $color-black-70 60%,
+          $color-black-70
+        );
+      }
     }
 
     &--search {
